Add some changes to Printer